--- a/AzureExtension.FullMinify/appsettings.json
+++ b/AzureExtension.FullMinify/appsettings.json
@@ -4,5 +4,7 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "minify.path": "C:\\git\\melcherit",
+  "minify.extensions":  "css;html;js" 
 }
