--- a/AzureExtension.FullMinify/appsettings.json
+++ b/AzureExtension.FullMinify/appsettings.json
@@ -5,6 +5,6 @@
       "Default": "Warning"
     }
   },
-  "minify.path": "C:\\git\\melcherit",
-  "minify.extensions":  "css;html;js" 
+  "minify.path": "C:\\git\\melcherit\\public\\",
+  "minify.extensions":  ".css;.html;.js" 
 }
