--- a/AzureExtension.FullMinify/appsettings.json
+++ b/AzureExtension.FullMinify/appsettings.json
@@ -1,10 +1,5 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
   "minify.path": "C:\\git\\melcherit\\public\\",
-  "minify.extensions":  ".css;.html;.js" 
+  "minify.extensions": ".css;.html;.js",
+  "minify.logpath": "C:\\temp"
 }
