--- a/AzureExtension.FullMinify/appsettings.json
+++ b/AzureExtension.FullMinify/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "minify.path": "C:\\git\\melcherit\\public\\",
-  "minify.extensions": ".css;.html;.js",
-  "minify.logpath": "C:\\temp"
+  "minify.path": "D:\\home\\site\\wwwroot\\",
+  "minify.extensions": ".css;.html;.js;.png;.jpeg;.jpg;.gif",
+  "minify.logpath": "D:\\home\\site\\wwwroot\\app_data\\"
 }
