--- a/AzureExtension.FullMinify/appsettings.Development.json
+++ b/AzureExtension.FullMinify/appsettings.Development.json
@@ -1,10 +1,5 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+  "minify.path": "C:\\git\\melcherit\\public\\",
+  "minify.extensions": ".css;.html;.js;.png;.jpeg;.jpg;.gif",
+  "minify.logpath": "C:\\temp"
 }
